--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rajatsardesai.github.io",
+  "homepage": "http://rajatsardesai.github.io/",
   "name": "vaccico",
   "version": "0.1.0",
   "private": true,
